--- a/config/database.yml
+++ b/config/database.yml
@@ -5,3 +5,10 @@ development:
   username: root
   password: "666999"
 
+production:
+  adapter: mysql2
+  encoding: utf8
+  database: mebel_development
+  username: root
+  password: "666999"
+
